--- a/src/A/Makefile
+++ b/src/A/Makefile
@@ -1,4 +1,4 @@
 # makefile for debugging
 
 main:
-	clang -g -o main.out -std=c11 -fsanitize=address -DUSE_INLINE main.c bitset.c ../B/error.c
+	clang -g -o main.out -std=c11 -O3 -DUSE_INLINE main.c bitset.c ../B/error.c
