--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,7 +5,7 @@
         "type": "lldb",
         "request": "launch",
         "name": "Debug",
-        "program": "${workspaceFolder}/src/A/main.out",
+        "program": "${workspaceFolder}/steg-decode",
         "args": [],
         "cwd": "${workspaceFolder}"
       }
